# treesitter-dart

./: .metadata  README.md  build.sh  build_parsers.dart  build_parsers.sh  ffigen.yaml  parsers.json  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: treesitter.podspec
ios/libtree-sitter.xcframework/: Info.plist
lib/: treesitter.dart  treesitter_bindings_generated.dart
lib/src/: tree_sitter.dart  tree_sitter_abstract.dart  tree_sitter_ffi.dart  tree_sitter_web.dart
lib/src/bindings/: tree_sitter_bindings.dart
linux/: CMakeLists.txt
macos/: treesitter.podspec
macos/Classes/: treesitter.c
macos/TreeSitter.xcframework/: Info.plist
parsers/treesitter_c/: README.md  ffigen.yaml  pubspec.yaml
parsers/treesitter_c/android/: build.gradle  settings.gradle
parsers/treesitter_c/example/: README.md  pubspec.yaml
parsers/treesitter_c/ios/: treesitter_c.podspec
parsers/treesitter_c/src/: CMakeLists.txt  treesitter_c.c
src/: CMakeLists.txt  treesitter.c
windows/: CMakeLists.txt
(+28 files in other folders)
